# mcp-persist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  pyproject.toml  redis.py  test_redis_event_store.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmarks/: benchmark.py
docs/: api.md  architecture.md  backends.md  benchmarks.md  cli.md  encryption.md  multi-tenancy.md  production.md  retention-policies.md  tiered-storage.md  typescript.md
examples/: README.md  _smoke_test.py  fastmcp_plugin_server.py  postgres_server.py  redis_server.py  resume_demo.py  sqlite_server.py
src/mcp_persist/: __init__.py  _admin.py  _cli.py  _sse_parser.py  _stream_buffer.py  batching.py  compression.py  config.py  encryption.py  fastmcp.py  metrics.py  migration.py  otel.py  postgres.py  proxy.py  redis.py  retention.py  scheduler.py  sqlite.py  stored.py  tiered.py
tests/: _mp_worker.py  test_admin_doctor.py  test_admin_purge_migrate.py  test_admin_stats.py  test_batching.py  test_bug_finding_corruption.py  test_cli.py  test_compression.py  test_config.py  test_create.py  test_encryption.py  test_examples_smoke.py  test_fastmcp_plugin.py  test_forking.py  test_integrity_all.py  test_metrics.py  test_migration.py  test_multiprocess.py  test_otel.py  test_package.py  test_postgres_event_store.py  test_postgres_tenancy_batching.py  test_production_stress.py  test_proxy.py  test_redis_event_store.py  test_redis_write_script.py  test_retention.py  test_scheduler.py  test_sqlite_event_store.py  test_sse_parser.py  test_stream_buffer.py  test_streaming.py  test_stress_postgres.py  test_stress_redis.py  test_stress_sqlite.py  test_tenancy.py  test_tiered.py
