[project]
name = "mcp-persist"
version = "1.8.1"
description = "Production-grade persistence backends for the MCP Python SDK"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Armaan Sandhu" }]
keywords = ["mcp", "model-context-protocol", "redis", "eventstore", "sse", "resumability"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
redis = ["redis>=4.2.0"]
sqlite = ["aiosqlite>=0.20.0"]
postgres = ["asyncpg>=0.30.0"]
# The mcp-persist-proxy CLI needs no extra: httpx and uvicorn are already
# transitive dependencies of `mcp`.

[project.scripts]
mcp-persist-proxy = "mcp_persist._cli:main"

[project.urls]
Homepage = "https://github.com/Ar-maan05/mcp-persist"
Repository = "https://github.com/Ar-maan05/mcp-persist"
Issues = "https://github.com/Ar-maan05/mcp-persist/issues"
Changelog = "https://github.com/Ar-maan05/mcp-persist/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "anyio>=4.9",
    "fakeredis>=2.26.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "pytest-anyio",
    "pyright>=1.1.400",
    "ruff>=0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_persist"]

[tool.pytest.ini_options]
addopts = "--color=yes -p anyio"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
